--- a/src/pages/estimate/estimation-details.html
+++ b/src/pages/estimate/estimation-details.html
@@ -943,8 +943,12 @@
                             <ion-label>{{displayINR(order.estimation.product.product_COST)}}</ion-label>
                         </ion-item>
                         <ion-item *ngIf="isToggledTax">
-                            <ion-label color="selva">Tax </ion-label>
-                            <ion-label>{{displayINR(order.estimation.totalTax)}}</ion-label>
+                            <ion-label color="selva">Tax 1</ion-label>
+                            <ion-label>{{displayINR(order.estimation.totalTax1)}}</ion-label>
+                        </ion-item>
+                        <ion-item *ngIf="isToggledTax">
+                            <ion-label color="selva">Tax 2</ion-label>
+                            <ion-label>{{displayINR(order.estimation.totalTax2)}}</ion-label>
                         </ion-item>
                         <ion-item *ngIf="showTransportCost">
                             <ion-label color="selva">Transport Cost </ion-label>
@@ -1452,8 +1456,12 @@
                         <!-- <ion-label>{{displayINR(order.estimation.product.product_COST)}}</ion-label> -->
                         <!-- </ion-item> -->
                         <ion-item *ngIf="isToggledTax">
-                            <ion-label color="selva">Tax </ion-label>
-                            <ion-label>{{displayINR(order.estimation.totalTax)}}</ion-label>
+                            <ion-label color="selva">Tax 1</ion-label>
+                            <ion-label>{{displayINR(order.estimation.totalTax1)}}</ion-label>
+                        </ion-item>
+                        <ion-item *ngIf="isToggledTax">
+                            <ion-label color="selva">Tax 2</ion-label>
+                            <ion-label>{{displayINR(order.estimation.totalTax2)}}</ion-label>
                         </ion-item>
                         <ion-item *ngIf="showTransportCost">
                             <ion-label color="selva">Transport Cost </ion-label>
